// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<A /> should add appropriate attributes for an external link 1`] = `
<a
  class="sc-bwzfXH fSMIRv"
  href="http://google.com/"
  rel="external noopener noreferrer"
  target="_blank"
>
  <h1>
    Test
  </h1>
</a>
`;

exports[`<A /> should match snapshot for <Link> 1`] = `
<Styled(Link)
  plainLink={false}
  to="/someRoute"
>
  <h1>
    Test
  </h1>
</Styled(Link)>
`;

exports[`<A /> should match snapshot for <a> 1`] = `
<styled.a
  href="http://google.com/"
  plainLink={true}
>
  <h1>
    Test
  </h1>
</styled.a>
`;
